--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Input animation */
+/* --------------------------------------------------------------------------------------------- */
+.--input {
+    transition: transform 0.3s ease;
+}
+
+.--input-push-up {
+    transform: translate(0px, -5px);
+}
+
+.--input-push-down {
+    transform: translate(0px, 5px);
+}
+
+/* Fade animation */
+/* --------------------------------------------------------------------------------------------- */
+.--fade-enter-active,
+.--fade-leave-active {
+    transition: opacity 0.5s ease;
+}
+.--fade-enter-from,
+.--fade-leave-to {
+    opacity: 0;
+}
+
+/* Select animation */
+/* --------------------------------------------------------------------------------------------- */
+.--select {
+    transition: background-color 0.3s ease;
+}
+
+.--popup-enter-active,
+.--popup-leave-active {
+    transition: opacity 0.25s ease;
+}
+
+.--popup-enter-from,
+.--popup-leave-to {
+    opacity: 0;
+}
