--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,17 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Input animation */
+/* Motion animation */
 /* --------------------------------------------------------------------------------------------- */
-.--input {
-    transition: transform 0.3s ease;
+.--xy {
+    transition: transform 0.5s ease;
 }
 
-.--input-push-up {
+.--xy-push-up {
     transform: translate(0px, -5px);
 }
 
-.--input-push-down {
+.--xy-push-down {
     transform: translate(0px, 5px);
 }
 
