--- a/resources/css/components/navModal.css
+++ b/resources/css/components/navModal.css
@@ -21,7 +21,7 @@
         @apply bg-gray-50 font-bold flex gap-3 items-center mb-4 px-6 py-4 rounded-md text-gray-800 text-lg;
     }
 
-    .create-button {
+    .modal-create-button {
         @apply absolute bottom-0 bg-blue-700 font-bold py-6 rounded-md text-white w-full hover:bg-blue-800;
     }
 
