--- a/resources/css/components/auth.css
+++ b/resources/css/components/auth.css
@@ -10,19 +10,19 @@
     }
 
     .auth-input-box {
-        @apply border-2 border-gray-100 flex rounded-md text-gray-800 w-full;
+        @apply border-2 border-gray-100 flex px-5 py-4 rounded-md text-gray-800 w-full md:p-0;
     }
 
     .auth-input-field {
-        @apply outline-none pl-4 rounded-md text-gray-800 w-full placeholder:text-gray-400;
+        @apply outline-none rounded-md text-gray-800 w-full placeholder:text-gray-400 md:pl-4;
     }
 
     .auth-content-box {
-        @apply bg-white drop-shadow -mt-24 py-10 px-10 rounded-md w-10/12 2xl:w-1/3;
+        @apply bg-white drop-shadow py-8 px-6 rounded-md w-11/12 2xl:w-1/3 md:-mt-24 md:px-10 md:py-10;
     }
 
     .auth-submit-button {
-        @apply bg-blue-600 font-medium py-4 rounded-md text-white w-full hover:bg-blue-700;
+        @apply bg-blue-600 font-medium py-5 rounded-md text-white w-full hover:bg-blue-700;
     }
 
     .auth-icon-box {
@@ -31,5 +31,9 @@
 
     .auth-link {
         @apply cursor-pointer font-medium underline text-blue-700;
+    }
+
+    .auth-google-button {
+        @apply bg-white border-2 border-gray-800 cursor-pointer flex font-medium gap-3 items-center justify-center py-4 rounded-md text-gray-800 w-full hover:bg-gray-100;
     }
 }
