--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Global */
+/* --------------------------------------------------------------------------------------------- */
+body {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}::-webkit-scrollbar {
+    display: none;
+}
+
 /* Motion animation */
 /* --------------------------------------------------------------------------------------------- */
 .--xy {
