--- a/resources/css/components/header.css
+++ b/resources/css/components/header.css
@@ -6,7 +6,7 @@
 /* --------------------------------------------------------------------------------------------- */
 @layer components {
     .header-create-button {
-        @apply bg-blue-700 font-medium py-4 px-6 rounded-md text-white hover:bg-blue-800;
+        @apply bg-blue-700 font-semibold py-4 px-6 rounded-md text-white hover:bg-blue-800;
     }
 
     .header-nav {
